testsuite/tests/typecheck/should_fail/T22707.stderr

T22707.hs:6:37: error: [GHC-18872]
    • Couldn't match kind ‘*’ with ‘GHC.Types.RuntimeRep’
      When matching types
        p0 :: *
        GHC.Types.LiftedRep :: GHC.Types.RuntimeRep
      Expected: Cont o i1 a
        Actual: Cont (i2 -> o) i1 a
    • In the first argument of ‘runCont’, namely ‘c’
      In the expression:
        (runCont c)
          (ati1tti2 $ \ a -> evalCont (t1 c) >>== \ ati1 -> return ati1 a)
      In the second argument of ‘($)’, namely
        ‘\ ati1tti2
           -> (runCont c)
                (ati1tti2 $ \ a -> evalCont (t1 c) >>== \ ati1 -> ...)’

T22707.hs:11:10: [GHC-39999]
     No instance for ‘Applicative (Cont p p)’
        arising from the superclasses of an instance declaration
     In the instance declaration for ‘Monad (Cont p p)’